--- a/.ebextensions/1-td-agent-install.config
+++ b/.ebextensions/1-td-agent-install.config
@@ -5,6 +5,7 @@ commands:
 
     02-command:
         command: curl -L https://toolbelt.treasuredata.com/sh/install-redhat-td-agent2.sh | sh
+        command: td-agent-gem install fluent-plugin-s3
 
     03-command:
         command: /etc/init.d/td-agent restart
